--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,38 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: lightgray;
+}
+
+.container {
+  width: 60%;
+  height: 60%;
+  margin: 0 auto;
+  background-color: red;
+}
+
+.slider {
+  height: 100%;
+  position: relative;
+}
+
+.images {
+  height: 100%;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.hide {
+  display: none;
+}
+
