--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,23 @@ img {
   display: none;
 }
 
+.btn {
+  position: absolute;
+  background-color: white;
+  color: black;
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 25px;
+  left: 50%;
+  transform: translate(-50%);
+}
+
+.btn.up {
+  top: 10px;
+}
+
+.btn.down {
+  bottom: 10px;
+}
