--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,14 @@ img {
   object-fit: cover;
 }
 
+img:first-child {
+  object-position: 0px -350px;
+}
+
+img:nth-child(2) {
+  object-position: 0px -350px;
+}
+
 .hide {
   display: none;
 }
