--- a/css/style.css
+++ b/css/style.css
@@ -24,11 +24,16 @@ main {
   width: 100%;
 }
 
+.slider-right {
+  width: 20%;
+  position: relative;
+}
+
 .thumb {
   display: flex;
   flex-direction: column;
-  width: 20%;
-  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 .imageCont {
